--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     <string name="string_album">相册</string>
     <string name="string_take_photo">拍照</string>
     <string name="string_sd_card_not_found">没有找到存储卡</string>
+    <string name="title_login_activity">欢迎登录</string>
+    <string name="hint_input_username_and_pwd_first">请先输入用户名或密码</string>
+    <string name="hint_login_ing">登录中……</string>
+    <string name="string_login_success">登录成功</string>
+    <string name="hint_skip">跳过</string>
+    <string name="title_complete">完善资料</string>
+    <string name="hint_take_1_minute_to_complete">花1分钟完善一下资料吧~</string>
+    <string name="hint_camera_permission_first">你必须允许使用相机才能拍照哦~</string>
+    <string name="text_to_open">去开启</string>
 </resources>
