--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="hint_take_1_minute_to_complete">花1分钟完善一下资料吧~</string>
     <string name="hint_camera_permission_first">你必须允许使用相机才能拍照哦~</string>
     <string name="text_to_open">去开启</string>
+    <string name="string_get_image_error">图片读取失败！</string>
 </resources>
