--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="hint_camera_permission_first">你必须允许使用相机才能拍照哦~</string>
     <string name="text_to_open">去开启</string>
     <string name="string_get_image_error">图片读取失败！</string>
+    <string name="string_to_choose">请选择</string>
 </resources>
